Fixing flyout menu alignment

--- a/input-css/style.scss
+++ b/input-css/style.scss
@@ -580,7 +580,7 @@ aside.callout-box.warning {
 	    background: $primary-accent;
 	    display: none;
 	    height: 100%;
-	    left: 59px;
+	    left: 100%;
 	    position: absolute;
 	    top: 0;
 	    width: 300px;
